# registers

./: Cargo.toml  LICENSE.txt  README.md  justfile
.github/workflows/: ci.yml
compile-tests/: invalid_meta.rs  invalid_meta.stderr  invalid_size.rs  invalid_size.stderr
register-macros/: Cargo.toml  README.md
register-macros/src/: common.rs  field.rs  lib.rs  register.rs  util.rs
src/: common.rs  lib.rs  register.rs  register32.rs
tests/: attr.rs  compile.rs  integration.rs  new.rs
