[workspace]
resolver = "3"
members = [ "register-macros" ]

[workspace.package]
version = "0.1.0"
authors = [ "Jacob Reger <regerjacob@gmail.com>" ]
description = "A simple library for working with registers in Rust."

[package]
name = "registers"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2024"
license = "MIT"

[dependencies]
register-macros = { version = "0.1.0", path = "./register-macros/" }
thiserror = "2.0.18"
