[workspace]
resolver = "3"
members = [ "register-macros" ]

[workspace.package]
version = "0.0.2"
authors = [ "Jacob Reger <regerjacob@gmail.com>" ]
description = "A simple library for working with registers in Rust."
license = "MIT"
repository = "https://github.com/regerj/registers"

[package]
name = "registers"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords = [ "register", "mmio", "pcie", "cpu", "embedded" ]
categories = [ "embedded", "hardware-support", "no-std::no-alloc" ]
readme = "README.md"

[dependencies]
register-macros = { version = "0.0.1", path = "./register-macros/" }
thiserror = "2.0.18"

[dev-dependencies]
trybuild = "1.0"
