[package]
name = "register-macros"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural macros for the \"registers\" crate"
edition = "2024"
readme = "README.md"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.117"
